docs/api/qiskit/0.19/qiskit.circuit.library.RXGate.mdx
---
title: RXGate (v0.19)
description: API reference for qiskit.circuit.library.RXGate in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.RXGate
---

# RXGate

<Class id="qiskit.circuit.library.RXGate" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/circuit/library/standard_gates/rx.py" signature="RXGate(theta, label=None)" modifiers="class">
  Single-qubit rotation about the X axis.

  **Circuit symbol:**

  ```python
       ┌───────┐
  q_0: ┤ Rx(ϴ) ├
       └───────┘
  ```

  **Matrix Representation:**

$$
\begin{align}\begin{aligned}\newcommand{\th}{\frac{\theta}{2}}\\\begin{split}RX(\theta) = exp(-i \th X) =
\begin{pmatrix}
\cos{\th}   & -i\sin{\th} \\
-i\sin{\th} & \cos{\th}
\end{pmatrix}\end{split}\end{aligned}\end{align} 
$$

  Create new RX gate.

  ## Attributes

  <span id="rxgate-decompositions" />

  ### decompositions

  <Attribute id="qiskit.circuit.library.RXGate.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  <span id="rxgate-definition" />

  ### definition

  <Attribute id="qiskit.circuit.library.RXGate.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  <span id="rxgate-label" />

  ### label

  <Attribute id="qiskit.circuit.library.RXGate.label" attributeTypeHint="str">
    Return gate label

    **Return type**

    `str`
  </Attribute>

  <span id="rxgate-params" />

  ### params

  <Attribute id="qiskit.circuit.library.RXGate.params">
    return instruction params.
  </Attribute>

  ## Methods

  <span id="rxgate-add-decomposition" />

  ### add\_decomposition

  <Function id="qiskit.circuit.library.RXGate.add_decomposition" signature="RXGate.add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  <span id="rxgate-assemble" />

  ### assemble

  <Function id="qiskit.circuit.library.RXGate.assemble" signature="RXGate.assemble()">
    Assemble a QasmQobjInstruction

    **Return type**

    [`Instruction`](qiskit.circuit.Instruction "qiskit.circuit.instruction.Instruction")
  </Function>

  <span id="rxgate-broadcast-arguments" />

  ### broadcast\_arguments

  <Function id="qiskit.circuit.library.RXGate.broadcast_arguments" signature="RXGate.broadcast_arguments(qargs, cargs)">
    Validation and handling of the arguments and its relationship.

    For example, `cx([q[0],q[1]], q[2])` means `cx(q[0], q[2]); cx(q[1], q[2])`. This method yields the arguments in the right grouping. In the given example:

    ```python
    in: [[q[0],q[1]], q[2]],[]
    outs: [q[0], q[2]], []
          [q[1], q[2]], []
    ```

    The general broadcasting rules are:

    > *   If len(qargs) == 1:
    >
    >     ```python
    >     [q[0], q[1]] -> [q[0]],[q[1]]
    >     ```
    >
    > *   If len(qargs) == 2:
    >
    >     ```python
    >     [[q[0], q[1]], [r[0], r[1]]] -> [q[0], r[0]], [q[1], r[1]]
    >     [[q[0]], [r[0], r[1]]]       -> [q[0], r[0]], [q[0], r[1]]
    >     [[q[0], q[1]], [r[0]]]       -> [q[0], r[0]], [q[1], r[0]]
    >     ```
    >
    > *   If len(qargs) >= 3:
    >
    >     ```python
    >     [q[0], q[1]], [r[0], r[1]],  ...] -> [q[0], r[0], ...], [q[1], r[1], ...]
    >     ```

    **Parameters**

    *   **qargs** (`List`) – List of quantum bit arguments.
    *   **cargs** (`List`) – List of classical bit arguments.

    **Return type**

    `Tuple`\[`List`, `List`]

    **Returns**

    A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  <span id="rxgate-c-if" />

  ### c\_if

  <Function id="qiskit.circuit.library.RXGate.c_if" signature="RXGate.c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  <span id="rxgate-control" />

  ### control

  <Function id="qiskit.circuit.library.RXGate.control" signature="RXGate.control(num_ctrl_qubits=1, label=None, ctrl_state=None)">
    Return a (mutli-)controlled-RX gate.

    **Parameters**

    *   **num\_ctrl\_qubits** (*int*) – number of control qubits.
    *   **label** (*str or None*) – An optional label for the gate \[Default: None]
    *   **ctrl\_state** (*int or str or None*) – control state expressed as integer, string (e.g. ‘110’), or None. If None, use all 1s.

    **Returns**

    controlled version of this gate.

    **Return type**

    [ControlledGate](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate")
  </Function>

  <span id="rxgate-copy" />

  ### copy

  <Function id="qiskit.circuit.library.RXGate.copy" signature="RXGate.copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="rxgate-inverse" />

  ### inverse

  <Function id="qiskit.circuit.library.RXGate.inverse" signature="RXGate.inverse()">
    Return inverted RX gate.

    $RX(\lambda)^{\dagger} = RX(-\lambda)$
  </Function>

  <span id="rxgate-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.circuit.library.RXGate.is_parameterized" signature="RXGate.is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  <span id="rxgate-mirror" />

  ### mirror

  <Function id="qiskit.circuit.library.RXGate.mirror" signature="RXGate.mirror()">
    For a composite instruction, reverse the order of sub-gates.

    This is done by recursively mirroring all sub-instructions. It does not invert any gate.

    **Returns**

    a fresh gate with sub-gates reversed

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="rxgate-power" />

  ### power

  <Function id="qiskit.circuit.library.RXGate.power" signature="RXGate.power(exponent)">
    Creates a unitary gate as gate^exponent.

    **Parameters**

    **exponent** (*float*) – Gate^exponent

    **Returns**

    To which to\_matrix is self.to\_matrix^exponent.

    **Return type**

    [qiskit.extensions.UnitaryGate](qiskit.extensions.UnitaryGate "qiskit.extensions.UnitaryGate")

    **Raises**

    **CircuitError** – If Gate is not unitary
  </Function>

  <span id="rxgate-qasm" />

  ### qasm

  <Function id="qiskit.circuit.library.RXGate.qasm" signature="RXGate.qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  <span id="rxgate-repeat" />

  ### repeat

  <Function id="qiskit.circuit.library.RXGate.repeat" signature="RXGate.repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  <span id="rxgate-to-matrix" />

  ### to\_matrix

  <Function id="qiskit.circuit.library.RXGate.to_matrix" signature="RXGate.to_matrix()">
    Return a numpy.array for the RX gate.
  </Function>
</Class>

